; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_pm2301_charger.c_pm2xxx_charger_ovv_mngt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_pm2301_charger.c_pm2xxx_charger_ovv_mngt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pm2xxx_charger = type { i32, i32, %struct.TYPE_4__, %struct.TYPE_3__, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [22 x i8] c"Overvoltage detected\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pm2xxx_charger*, i32)* @pm2xxx_charger_ovv_mngt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pm2xxx_charger_ovv_mngt(%struct.pm2xxx_charger* %0, i32 %1) #0 {
  %3 = alloca %struct.pm2xxx_charger*, align 8
  %4 = alloca i32, align 4
  store %struct.pm2xxx_charger* %0, %struct.pm2xxx_charger** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.pm2xxx_charger*, %struct.pm2xxx_charger** %3, align 8
  %6 = getelementptr inbounds %struct.pm2xxx_charger, %struct.pm2xxx_charger* %5, i32 0, i32 4
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @dev_err(i32 %7, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.pm2xxx_charger*, %struct.pm2xxx_charger** %3, align 8
  %10 = getelementptr inbounds %struct.pm2xxx_charger, %struct.pm2xxx_charger* %9, i32 0, i32 3
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store i32 1, i32* %11, align 4
  %12 = load %struct.pm2xxx_charger*, %struct.pm2xxx_charger** %3, align 8
  %13 = getelementptr inbounds %struct.pm2xxx_charger, %struct.pm2xxx_charger* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @power_supply_changed(i32 %15)
  %17 = load %struct.pm2xxx_charger*, %struct.pm2xxx_charger** %3, align 8
  %18 = getelementptr inbounds %struct.pm2xxx_charger, %struct.pm2xxx_charger* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.pm2xxx_charger*, %struct.pm2xxx_charger** %3, align 8
  %21 = getelementptr inbounds %struct.pm2xxx_charger, %struct.pm2xxx_charger* %20, i32 0, i32 0
  %22 = call i32 @queue_delayed_work(i32 %19, i32* %21, i32 0)
  ret i32 0
}

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @power_supply_changed(i32) #1

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
